@@ -1,3 +1,8 @@
+2012-12-10 Mon  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-lint-extra-buffer-run-other-defcustom):
+	Tighten search regexp. Add more comments.
+
 2012-12-06 Fri  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el: Correct byte compiler problems.
